Fixes navbar collapse for mobile menus

--- a/sass/styles.scss
+++ b/sass/styles.scss
@@ -526,6 +526,8 @@ footer[role="footer"] {
     height: 130px;
   }
 
+  .navbar-collapse {}
+
   .resources {
     li {
       width: 143px;
